<resources>
    <!--general-->
    <string name="app_name">Koga</string>

    <!--activity-main-->
    <string name="header_home">Home</string>
    <string name="button_koga">Koga!</string>
    <string name="button_addmenu">Add Menu</string>
    <string name="button_listmenu">List Menus</string>
    <string name="button_options">Options</string>

    <!--activity-koga -->
    <string name="header_koga">Koga!</string>

    <!--activity-add-->
    <string name="header_add">Add Menu</string>
    <string name="button_save">Save</string>
    <string name="text_name_input">Name:</string>
    <string name="textinput_name">Menu-Name</string>
    <string name="text_likeness_input">Likeness:</string>
    <string name="text_isVeggie_input">Veggie:</string>
    <string name="text_healthScore_input">Health Score:</string>
    <string name="text_carbohydrate_input">Carbohydrate:</string>
    <string name="text_ingredients_input">Ingredients:</string>
    <string name="text_link_input">Link with:</string>


    <!--activity-list -->
    <string name="header_list">List</string>

    <!--activity-option-->
    <string name="header_options">Option</string>
    <string name="text_days">Number of days:</string>
    <string name="intinput_days">days</string>
    <string name="text_meat">max number of meat-menus:</string>
    <string name="intinpur_meat">max meat-menus</string>
    <string name="text_duplicate">max number of duplicates:</string>
    <string name="intinput_duplicate">max duplicates</string>
    <string name="text_carbs">max number of carbohydrate duplicates:</string>
    <string name="intinput_carbs">max carbohydrate duplicates</string>
    <string name="text_health">min average health score:</string>
    <string name="doubleinput_health">health score</string>


    <!--constants-->
    <string name="carbohydrate_pasta">Pasta</string>
    <string name="carbohydrate_rice">Rice</string>
    <string name="carbohydrate_potato">Potato</string>
    <string name="carbohydrate_bread">Bread</string>
    <string name="carbohydrate_other">Other</string>
    <string name="carbohydrate_nothing">Nothing</string>

    <string name="unit_gram">g</string>
    <string name="unit_millilitre">litre</string>
    <string name="unit_packet">pack</string>
    <string name="unit_piece">piece</string>
    <string name="unit_none">no available unit</string>

</resources>